# reth

./: Cargo.toml  reth_research_task.md
.claude/: settings.local.json
crates/cli/commands/src/: node.rs
crates/ethereum/cli/: Cargo.toml
crates/ethereum/cli/src/: app.rs
crates/ethereum/node/: Cargo.toml
crates/node/builder/: Cargo.toml
crates/node/builder/src/: setup.rs
crates/node/builder/src/launch/: engine.rs
crates/node/core/: Cargo.toml
crates/node/core/src/: node_config.rs
crates/node/core/src/args/: mod.rs  research_args.rs
crates/research/: CLI_INTEGRATION.md  COMPLETE.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  INTEGRATION.md  NEXT_STEPS.md  README.md  STATUS.md  SUMMARY.md
crates/research/src/: config.rs  database.rs  divergence.rs  executor.rs  inspector.rs  lib.rs  metrics.rs  tracking_inspector.rs
crates/research/tests/: inspector_test.rs
crates/stages/stages/: Cargo.toml
crates/stages/stages/src/stages/: execution.rs
crates/transaction-pool/src/validate/: eth.rs
examples/exex-research/: Cargo.toml
examples/exex-research/src/: main.rs
