[package]
name = "reth-research"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth dependencies
reth-evm.workspace = true
reth-primitives-traits.workspace = true
reth-execution-types.workspace = true

# Revm dependencies
revm.workspace = true
revm-interpreter.workspace = true

# Alloy dependencies
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Logging and metrics
tracing.workspace = true
metrics.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.0"
reth-db = { workspace = true, features = ["test-utils"] }

[features]
default = []
test-utils = []
